--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/carbon-credit-token.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.carbon-offset-projects]
+path = 'contracts/carbon-offset-projects.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
