--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -5,6 +5,11 @@ authors = []
 telemetry = true
 cache_dir = './.cache'
 requirements = []
+[contracts.carbon-credit-marketplace]
+path = 'contracts/carbon-credit-marketplace.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.carbon-credit-token]
 path = 'contracts/carbon-credit-token.clar'
 clarity_version = 2
