Add Testing for Carbon Credit Marketplace Contract

--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -55,6 +55,11 @@ plan:
             path: contracts/carbon-credit-token.clar
             clarity-version: 2
         - emulated-contract-publish:
+            contract-name: carbon-credit-marketplace
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/carbon-credit-marketplace.clar
+            clarity-version: 2
+        - emulated-contract-publish:
             contract-name: carbon-offset-projects
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/carbon-offset-projects.clar
